// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`the snapshot is the whole screen as text, at 60 and at 120 columns: snapshot-60 1`] = `
"TOWER ─────────────────────────────── ACME · feature/widgets
INFORMATION CHARLIE · 21:47 · 2h34m since first departure
███████████▒▒▒▒▒▒▒▒▒  12 of 21 landed · 2 airborne · 1 hold…

RUNWAY A  ▸ 14  sonnet-5[1m]        RUNWAY B  ⚠ 12  opus

DEPARTURES
 ✓ 11 landed  (1 … 11)
 ⚠ 12        Voice n…  B   apps/server       holding short:…
 ✓ 13        The sur…  B   apps/server       opus          …
 ▸ 14        The onD…  A   apps/server       sonnet-5[1m]  …
 ▸ 15        notifyT…  A   apps/server       opus          …
 ○ 16        POST /telegram/notify    A   apps/server
 ○ 17        Attach the channel to …  A   apps/server
 ○ 18        surface on the threads…  A   packages/api
 ○ 19        The show-threads toggle  A   apps/web
 ○ 20        The terminal tags rows   A   apps/tui
 ○ 22        Retry the outbound web…
 ⚠ unknown flight 99
 ⚠ 1 unreadable line

TRANSCRIPT
 21:14:00  ACME 12   cleared for takeoff · opus
 21:22:00  ACME 14   on approach · sonnet
 21:23:00  ACME 14   go around · spec review: missing null …
 21:24:00  RUNWAY A  merged lane B at task 8
 21:25:00  TOWER     escalating 14 to opus after the second…
 21:26:00  ACME 12   squawk 7700 · needs the test DB created
 21:27:00  ⚠ unknown flight 99
           ⚠ unreadable line
 21:32:00  ACME 15   on final · opus
 21:32:00  TOWER     added ACME 22 · Retry the webhook
 21:33:00  TOWER     changed ACME 22 · title
 21:34:00  TOWER     removed ACME 21"
`;

exports[`the snapshot is the whole screen as text, at 60 and at 120 columns: snapshot-120 1`] = `
"TOWER ─────────────────────────────────────────────────────────────────────────────────────────── ACME · feature/widgets
INFORMATION CHARLIE · 21:47 · 2h34m since first departure
███████████████▒▒▒▒▒▒▒▒▒▒▒  12 of 21 landed · 2 airborne · 1 holding short

RUNWAY A  ▸ 14  sonnet-5[1m]        RUNWAY B  ⚠ 12  opus

DEPARTURES
 ✓ 11 landed  (1 … 11)
 ⚠ 12        Voice notes                       B   apps/server       holding short: needs the test DB created
 ✓ 13        The surface hint                  B   apps/server       opus            a91c2f0
 ▸ 14        The onDirectMessage handler       A   apps/server       sonnet-5[1m]    34m · go around · NORDO 24m
 ▸ 15        notifyTelegram                    A   apps/server       opus            on final · NORDO 15m
 ○ 16        POST /telegram/notify             A   apps/server
 ○ 17        Attach the channel to the agent   A   apps/server
 ○ 18        surface on the threads route      A   packages/api
 ○ 19        The show-threads toggle           A   apps/web
 ○ 20        The terminal tags rows            A   apps/tui
 ○ 22        Retry the outbound webhook
 ⚠ unknown flight 99
 ⚠ 1 unreadable line

TRANSCRIPT
 21:14:00  ACME 12   cleared for takeoff · opus
 21:22:00  ACME 14   on approach · sonnet
 21:23:00  ACME 14   go around · spec review: missing null guard
 21:24:00  RUNWAY A  merged lane B at task 8
 21:25:00  TOWER     escalating 14 to opus after the second bounce
 21:26:00  ACME 12   squawk 7700 · needs the test DB created
 21:27:00  ⚠ unknown flight 99
           ⚠ unreadable line
 21:32:00  ACME 15   on final · opus
 21:32:00  TOWER     added ACME 22 · Retry the webhook
 21:33:00  TOWER     changed ACME 22 · title
 21:34:00  TOWER     removed ACME 21"
`;
